--- a/index.html
+++ b/index.html
@@ -27,10 +27,49 @@
         <div id="blog" class="Blog" onclick="go(this.id)" >| BLOG | </div>
         <div id="contact" class="Contact" onclick="go(this.id)" >| CONTACT | </div>
     </div>
-    <section id="about_section"> ABOUT</section>
-    <section id="portfolio_section">PORTFOLIO</section>
-    <section id="blog_section">BLOG</section>
-    <section id="contact_section">CONTACT</section>
+    <section id="about_section"> 
+        <p style="margin-top: auto;">ABOUT</p>
+        <div class="container">
+            <div class="intro">
+                <img src="src/me.jpg" alt="me" >
+                <fieldset>
+                <legend style="color: bisque;">Who am i ?</legend>
+                <p>I'm a software engineering student at <a href="https://esprit.tn">ESPRIT</a><br>
+                i have serious Passion for making websites , web apps , 2d-video games from scratch <br> besides creating intuitive , dynamic user experiences .</p>
+                </fieldset>
+            </div>
+            <hr>
+            <div class="skills">
+                <label for="html">HTML</label>
+                <progress id="html" max="100" value="90">90%</progress>
+                <label for="css">CSS</label>
+                <progress id="css" max="100" value="90" >90%</progress>
+                <label for="javascript">JAVASCRIPT</label>
+                <progress id="javascript" max="100" value="70">70%</progress>
+                <label for="angular">ANGULAR</label>
+                <progress id="angular" max="100" value="80">80%</progress>
+                <label for="php">PHP</label>
+                <progress id="php" max="100" value="50">50%</progress>
+                <label for="java">JAVA</label>
+                <progress id="java" max="100" value="95">95%</progress>
+                <label for="spring">SPRING</label>
+                <progress id="spring" max="100" value="95">95%</progress>
+            </div>
+        </div>
+        
+    </section>
+    <section id="portfolio_section">
+        <p style="margin-top: auto;">PORTFOLIO</p>
+    </section>
+    <section id="blog_section">
+        <p style="margin-top: auto;">BLOG</p>
+    </section>
+    <section id="contact_section">
+        <p style="margin-top: auto;" >CONTACT</p>
+    </section>
+    <footer>
+        <p style="margin-top: auto;">JAMEL MRAD ©2022</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
