--- a/index.html
+++ b/index.html
@@ -7,69 +7,70 @@
     <title>JM</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;1,100;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header id="hero_section"> 
-        <div class="cont1">
+    <header>
+        <nav>
+            <div class="hamburger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+            <ul class="nav-links">
+                <li>
+                    <div class="section" id="Home" onclick="go(this.id)">HOME</div>  
+                </li>
+                <li>
+                    <div class="section" id="About" onclick="go(this.id)">ABOUT</div>
+                </li>
+                <li>
+                    <div class="section" id="Portfolio" onclick="go(this.id)">PORTFOLIO</div>
+                </li>
+                <li>
+                    <div class="section" id="Contact" onclick="go(this.id)">CONTACT</div>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    
+    <section class="landing">
+        <div class="intro" id="HomeSection">
             <p> Hi , i'm <div class="name">Jamel Mrad</div></p>
-            <p>a sofware engineering student.</p>
+            <p>a software engineering student .</p>
         </div>
-        <div id="btn" class="btn1" onclick="go(this.id)">
+        <div id="btn" class="btn" onclick="go(this.id)">
             View my work
         </div>
-    </header>
-    <div id="nav">
-        <div id="home" class="Home" onclick="go(this.id)" >| HOME | </div>
-        <div id="about" class="About" onclick="go(this.id)"  >| ABOUT | </div>
-        <div id="portfolio" class="Portfolio"onclick="go(this.id)" >| PORTFOLIO | </div>
-        <div id="blog" class="Blog" onclick="go(this.id)" >| BLOG | </div>
-        <div id="contact" class="Contact" onclick="go(this.id)" >| CONTACT | </div>
-    </div>
-    <section id="about_section"> 
-        <p style="margin-top: auto;">ABOUT</p>
-        <div class="container">
-            <div class="intro">
-                <img src="src/me.jpg" alt="me" >
+    </section>
+
+    <section class="landing">
+        <div class="AboutSection" id="AboutSection">
+            <img src="me.jpg" alt="me" >
                 <fieldset>
                 <legend style="color: bisque;">Who am i ?</legend>
                 <p>I'm a software engineering student at <a href="https://esprit.tn">ESPRIT</a><br>
-                i have serious Passion for making websites , web apps , 2d-video games from scratch <br> besides creating intuitive , dynamic user experiences .</p>
+                i have serious Passion for making websites , web apps from scratch <br> besides creating intuitive , dynamic user experiences .</p>
                 </fieldset>
-            </div>
-            <hr>
-            <div class="skills">
-                <label for="html">HTML</label>
-                <progress id="html" max="100" value="90">90%</progress>
-                <label for="css">CSS</label>
-                <progress id="css" max="100" value="90" >90%</progress>
-                <label for="javascript">JAVASCRIPT</label>
-                <progress id="javascript" max="100" value="70">70%</progress>
-                <label for="angular">ANGULAR</label>
-                <progress id="angular" max="100" value="80">80%</progress>
-                <label for="php">PHP</label>
-                <progress id="php" max="100" value="50">50%</progress>
-                <label for="java">JAVA</label>
-                <progress id="java" max="100" value="95">95%</progress>
-                <label for="spring">SPRING</label>
-                <progress id="spring" max="100" value="95">95%</progress>
-            </div>
+                </div>
         </div>
-        
     </section>
-    <section id="portfolio_section">
-        <p style="margin-top: auto;">PORTFOLIO</p>
+
+    <section class="landing">
+        <div class="PortfolioSection" id="PortfolioSection">
+
+        </div>
     </section>
-    <section id="blog_section">
-        <p style="margin-top: auto;">BLOG</p>
+
+    <section class="landing">
+        <div class="ContactSection" id="ContactSection">
+
+        </div>
     </section>
-    <section id="contact_section">
-        <p style="margin-top: auto;" >CONTACT</p>
-    </section>
-    <footer>
-        <p style="margin-top: auto;">JAMEL MRAD ©2022</p>
-    </footer>
-    <script src="script.js"></script>
+
+    <footer>JAMEL MRAD ©2022</footer>
+    <script src="./app.js"></script>
 </body>
 </html>
