--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
     <section class="landing">
         <div class="ContactSection" id="ContactSection">
             <p class="title">CONTACT</p>
+            <div class="formContainer">
+                <form action="" method="post" action="contact.php">
+                    <label for="name">Full Name</label>
+                    <input type="text" name="name" id="name" required>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" required>
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" cols="30" rows="6" required>type your message here ! </textarea>
+                    <input type="submit" value="Submit" id="submit">
+                </form>
+            </div>
         </div>
     </section>
 
