--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="ContactSection" id="ContactSection">
             <p class="title">CONTACT</p>
             <div class="formContainer">
-                <form action="" method="post" action="contact.php">
+                <form action="contact.php" method="post" >
                     <label for="name">Full Name</label>
                     <input type="text" name="name" id="name" required>
                     <label for="email">Email</label>
